# TEAM_AIM

./: .gitignore  command_memo.md  debug_motor.sh  entrypoint.sh  fastrtps_profiles.xml  mission_1_1.sh  mission_1_2.sh  mission_2.sh  mission_3.sh  mission_3_real.sh  mission_3_simul.sh  mission_domain_1.sh  mission_domain_2.sh  mission_domain_3.sh  mission_domain_4.sh  readme.md  readme_old.md  simulator_run.sh  source.sh  start_TEAM_AIM.sh
docker_kaist_aim/: Dockerfile  docker-compose.yml  readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/communication_manager/lib/communication_manager/: pose_sharing_handler
install/communication_manager/share/communication_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/domain_bridge/lib/domain_bridge/: domain_bridge
install/domain_bridge/share/domain_bridge/: local_setup.sh  package.bash  package.sh  package.zsh
install/hv_handler/lib/hv_handler/: hv_handler_node
install/hv_handler/share/ament_index/resource_index/package_run_dependencies/: hv_handler
install/hv_handler/share/ament_index/resource_index/parent_prefix_path/: hv_handler
install/hv_handler/share/hv_handler/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hv_handler/share/hv_handler/cmake/: hv_handlerConfig.cmake
install/hv_handler/share/hv_handler/config/: hv_params.yaml
install/mission_1_1/lib/mission_1_1/: control_cav_mission_1_1
install/mission_1_1/share/mission_1_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mission_1_1/share/mission_1_1/cmake/: mission_1_1Config.cmake
install/mission_1_2/lib/mission_1_2/: control_cav_mission_1_2  control_tower_mission_1_2
install/mission_1_2/share/mission_1_2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mission_2/lib/mission_2/: control_cav_mission_2
install/mission_2/share/mission_2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mission_2/share/mission_2/cmake/: mission_2Config.cmake
install/mission_2/share/mission_2/launch/: mission_2.launch.py
install/mission_3/lib/mission_3/: control_cav_mission_3  control_rotary_mission_3  control_tower_mission_3
install/mission_3/share/mission_3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mission_3/share/mission_3/launch/: mission_3.launch.py  run_mission_3.launch.py
install/scene_srv/include/scene_srv/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/scene_srv/include/scene_srv/srv/: scene_signal.h  start_signal.h
install/scene_srv/include/scene_srv/srv/detail/: scene_signal__builder.hpp  scene_signal__functions.c  scene_signal__functions.h  scene_signal__rosidl_typesupport_fastrtps_c.h  scene_signal__struct.hpp  scene_signal__type_support.c  scene_signal__type_support.h  start_signal__builder.hpp  start_signal__functions.c  start_signal__rosidl_typesupport_fastrtps_c.h  start_signal__rosidl_typesupport_fastrtps_cpp.hpp  start_signal__rosidl_typesupport_introspection_c.h  start_signal__rosidl_typesupport_introspection_cpp.hpp  start_signal__struct.h  start_signal__traits.hpp  start_signal__type_support.cpp
install/scene_srv/share/ament_index/resource_index/package_run_dependencies/: scene_srv
install/scene_srv/share/scene_srv/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/scene_srv/share/scene_srv/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  scene_srv__rosidl_typesupport_cExport-noconfig.cmake  scene_srv__rosidl_typesupport_cExport.cmake  scene_srv__rosidl_typesupport_cppExport-noconfig.cmake  scene_srv__rosidl_typesupport_introspection_cExport.cmake  scene_srv__rosidl_typesupport_introspection_cppExport.cmake
install/scene_srv/share/scene_srv/srv/: SceneSignal.idl  SceneSignal_Request.msg  StartSignal.idl  StartSignal_Request.msg
install/simulator/share/simulator/: package.sh  package.xml
install/simulator/share/simulator/cmake/: simulatorConfig.cmake
install/simulator/share/simulator/resource/assets/: path.json
install/simulator/share/simulator/resource/shader/: 2Dsprite.vert  2Dtext.vert  3Dobject.frag  3Dobject.vert  fAntialiasing.frag  fComposite.frag
install/simulator_launch/share/simulator_launch/: package.bash  package.sh  package.zsh
log/: latest_build
src/: readme.md
src/global_path/: path_mission1_01.csv  path_mission1_02.csv  path_mission2_1_01.csv  path_mission2_1_02.csv  path_mission2_1_03.csv  path_mission2_1_20.csv  path_mission2_1_24.csv  path_mission3_02_origin.csv  path_mission3_03.csv  path_mission3_04.csv  path_mission3_19.csv  path_mission3_32.csv
src/mission_1_1/: CMakeLists.txt  README.md
src/mission_1_1/src/: check_cam.py  control_cav_mission_1_1.cpp
src/mission_1_2/: CMakeLists.txt  README.md
src/mission_1_2/src/: control_cav_mission_1_2.cpp  control_tower_mission_1_2.cpp
src/mission_2/: CMakeLists.txt  README.md
src/mission_2/src/: control_cav_mission_2.cpp
src/mission_3/: CMakeLists.txt  README.md
src/mission_3/config/: cav_domain.yml
src/mission_3/launch/: mission_3.launch.py
src/mission_3/src/: check_motor.cpp  control_cav_mission_3.cpp  control_cav_mission_3_tuned.cpp  control_rotary_mission_3.cpp  control_tower_mission_3.cpp
